# rust-notebook

./: Cargo.toml
apis/src/: lib.rs
binary-tree/src/: lib.rs
channels/: Cargo.toml
channels/src/: main.rs
dynamic-dispatch/src/: lib.rs
lifetimes/src/: lib.rs
lists/src/: first.rs  fourth.rs  lib.rs  second.rs  third.rs
smart-pointers/src/: main.rs
